# 2026-eumetnet-ai-workshop-earthkit

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  myst.yml  pyproject.toml  setup.cfg
.github/workflows/: build-deploy-book.yml
content/: index.md
content/explanation/: branch-architecture.md  diataxis.md  index.md
content/howto/: review-book.md  setup-book.md
content/reference/: best-practices.md  quality-assurance.md  template-notebook.ipynb  useful-links.md
content/tutorials/: 01_loading_visualising_era5.ipynb  02_writing_to_zarr.ipynb  03_unit_conversion_normalisation.ipynb  04_grid_formats_regridding.ipynb  05_temporal_statistics.ipynb  06_chunking_strategies.ipynb  07_multi_source_polytope.ipynb  08_zarr_to_pytorch.ipynb  index.md
content/tutorials/show-stoppers/: XX-earthkit-transforms-temporal-aggregations.ipynb  index.md
