[project]
name = "2026-eumetnet-ai-workshop-earthkit"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "earthkit-data[all,zarr]==1.0.0rc1",
    "earthkit-geo[all]==1.0.0rc1",
    "earthkit-meteo[all]==1.0.0rc1",
    "earthkit-plots[geocoding,healpix,regridding]==1.0.0rc1",
    "earthkit-transforms[all]==1.0.0rc1",
    "earthkit-utils==1.0.0rc1",
    "ipykernel>=7.2",
    "jupyter>=1.1.1",
    "jupyter-book>=2.1.4",
    "torch>=2.9",
]
